[tool.poetry]
name = "wordview"
version = "0.1.0"
description = "WORDVIEW is a Python package for text analysis."
authors = ["meghdadFar <meghdad.farahmand@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["nlp", "text analysis", "statistics"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fasttext = "0.9.2"
pandas = "1.3.5"
scikit-learn = "1.0.1"
scipy = "1.10.0"
nltk = "3.6.6"
tqdm = "4.62.3"
wordcloud = "1.8.1"
plotly = "5.5.0"
tabulate = "0.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.0.0"
pytest = ">=7.1"
pytest-cov = ">=3.0.0"
ipython = ">=8.4.0"
sphinx = ">=v6.1.3"

[tool.poetry.scripts]
script_download = "wordview.bin.downloads:download_req"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"