[tool.poetry]
name = "wordview"
version = "1.1.1"
description = "Wordview is a Python package for text analysis."
authors = ["meghdadFar <meghdad.farahmand@gmail.com>"]
readme = "README.rst"
include = ["CHANGES.rst"]
exclude = ["notebooks/", "tests/", "data/"]
license = "MIT"
keywords = ["nlp", "text analysis", "statistics"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
langdetect = ">=1.0.9"
pandas = "2.0.1"
scikit-learn = "1.2.2"
scipy = "1.10.0"
nltk = "3.6.6"
tqdm = "4.62.3"
wordcloud = "1.9.1.1"
plotly = "5.5.0"
tabulate = "0.9.0"
sentence-transformers = "2.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.0.0"
pytest = ">=7.1"
pytest-cov = ">=3.0.0"
ipython = ">=8.4.0"
sphinx = ">=v6.1.3"
sphinx-rtd-theme = "1.2.1"
jupyter = "1.0.0"

[tool.poetry.scripts]
nltk_download_script = "bin.nltk_resources.py.check_nltk_resources"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"